# ROS2-OccupancyGrid_Map-generator

./: package.xml  setup.cfg  setup.py
launch/: map_printer.launch.py
map_printer/: map_printer.py
